fixed last commits

--- a/src/styles/blocks/actual_content.scss
+++ b/src/styles/blocks/actual_content.scss
@@ -3,7 +3,7 @@
 .actual {
   @include on-phone {
     display: grid;
-    grid-template-columns: repeat(2, 130px);
+    grid-template-columns: repeat(2, 110px);
     justify-content: center;
     gap: 20px;
     margin: 0 20px;
@@ -49,7 +49,13 @@
     @include on-phone-big {
       grid-column: 1/3;
       grid-row: 1;
-      left: 70px;
+      left: 100px;
+    }
+
+    @include on-phone-bigest {
+      grid-column: 1/3;
+      grid-row: 1;
+      left: 160px;
     }
 
     @include on-tablet {
@@ -58,33 +64,105 @@
       grid-column: 1/5;
       grid-row: 1;
       margin-left: 40px;
+      left: -40px;
+    }
+
+    @include on-tablet-big {
+      font-size: 48px;
+      line-height: 48px;
+      grid-column: 1/5;
+      grid-row: 1;
+      margin-left: 40px;
+      left: -150px;
+    }
+
+    @include on-tablet-bigest {
+      font-size: 48px;
+      line-height: 48px;
+      grid-column: 1/5;
+      grid-row: 1;
+      margin-left: 40px;
+      left: -200px;
     }
 
     @include on-desctop {
       grid-column: 1/6;
       grid-row: 1;
-      margin-left: -210px;
+      margin-left: 40px;
+      left: -40px;
+    }
+
+    @include on-desctop-big {
+      grid-column: 1/6;
+      grid-row: 1;
+      margin-left: 40px;
+      left: -110px;
+    }
+
+    @include on-desctop-bigest {
+      grid-column: 1/6;
+      grid-row: 1;
+      margin-left: 40px;
+      left: -210px;
     }
   }
 
   .actual__photo {
+    position: relative;
+
     @include on-phone {
-      width: 280px;
+      width: 300px;
       height: 280px;
-      grid-column: 1/2;
+      grid-column: 1/3;
       grid-row: 2;
+      left: -40px;
+      margin-left: 10px;
+      margin-right: 10px;
+    }
+
+    @include on-phone-mid {
+      width: 410px;
+      height: 310px;
+      grid-column: 1/3;
+      grid-row: 2;
+      left: -75px;
+      margin-left: 10px;
+      margin-right: 10px;
     }
 
     @include on-phone-big {
       width: 500px;
-      height: 500px;
+      height: 370px;
       grid-column: 1/4;
+      left: 0;
+    }
+
+    @include on-phone-bigest {
+      width: 600px;
+      height: 400px;
+      grid-column: 1/4;
+      left: 0;
     }
 
     @include on-tablet {
       width: 700px;
       height: 520px;
       grid-column: 1/6;
+      left: -12px;
+    }
+
+    @include on-tablet-big {
+      width: 900px;
+      height: 600px;
+      grid-column: 1/6;
+      left: -115px;
+    }
+
+    @include on-tablet-bigest {
+      width: 1000px;
+      height: 650px;
+      grid-column: 1/6;
+      left: -170px;
     }
 
     @include on-desctop {
@@ -93,8 +171,29 @@
       grid-column: 1/5;
       grid-row: 2;
       margin-bottom: 104px;
+      left: 3px;
+    }
+
+    @include on-desctop-big {
+      width: 695px;
+      height: 602px;
+      grid-column: 1/5;
+      grid-row: 2;
+      margin-bottom: 104px;
+      left: -70px;
+    }
+
+    @include on-desctop-bigest {
+      width: 845px;
+      height: 672px;
+      grid-column: 1/5;
+      grid-row: 2;
+      margin-bottom: 104px;
+      left: -160px;
     }
   }
+
+
 
   .actual__container {
     position: relative;
@@ -107,39 +206,110 @@
     @include on-phone-big {
       grid-column: 1/3;
       grid-row: 3;
-      left: 90px;
+      left: 120px;
+    }
+
+    @include on-phone-bigest {
+      grid-column: 1/3;
+      grid-row: 3;
+      left: 150px;
     }
 
     @include on-tablet {
       grid-column: 1/6;
+    }
+
+    @include on-tablet-big {
+      grid-column: 1/6;
+      left: -98px;
+    }
+
+    @include on-tablet-bigest {
+      grid-column: 1/6;
+      left: -158px;
     }
 
     @include on-desctop {
       grid-column: 8/12;
       grid-row: 2;
       margin-top: 100px;
+      left: 5px;
+    }
+
+    @include on-desctop-big {
+      grid-column: 8/12;
+      grid-row: 2;
+      margin-top: 100px;
+      left: 5px;
+      top: 60px;
+    }
+
+    @include on-desctop-bigest {
+      grid-column: 8/12;
+      grid-row: 2;
+      margin-top: 100px;
+      top: 120px;
+      left: 50px;
     }
   }
 
   .actual__photo-2 {
     @include on-phone {
-      width: 280px;
+      position: relative;
+      width: 300px;
       height: 280px;
-      grid-column: 1/2;
+      grid-column: 1/3;
       grid-row: 4;
+      left: -40px;
+      margin-left: 10px;
+      margin-right: 10px;
+    }
+
+    @include on-phone-mid {
+      width: 410px;
+      height: 310px;
+      grid-column: 1/3;
+      grid-row: 4;
+      left: -75px;
+      margin-left: 10px;
+      margin-right: 10px;
     }
 
     @include on-phone-big {
       width: 500px;
-      height: 500px;
+      height: 370px;
       grid-column: 1/4;
       grid-row: 4;
+      left: 1px;
+    }
+
+    @include on-phone-bigest {
+      width: 600px;
+      height: 400px;
+      grid-column: 1/4;
+      grid-row: 4;
+      left: 1px;
     }
 
     @include on-tablet {
       width: 700px;
       height: 520px;
       grid-column: 1/6;
+      left: -12px;
+    }
+
+    @include on-tablet-big {
+      width: 900px;
+      height: 600px;
+      grid-column: 1/6;
+      left: -115px;
+    }
+
+    @include on-tablet-bigest {
+      width: 1000px;
+      height: 650px;
+      grid-column: 1/6;
+      left: -170px;
     }
 
     @include on-desctop {
@@ -148,6 +318,25 @@
       grid-column: 1/5;
       grid-row: 3;
       margin-bottom: 104px;
+      left: 3px;
+    }
+
+    @include on-desctop-big {
+      width: 695px;
+      height: 602px;
+      grid-column: 1/5;
+      grid-row: 3;
+      margin-bottom: 104px;
+      left: -70px;
+    }
+
+    @include on-desctop-bigest {
+      width: 845px;
+      height: 672px;
+      grid-column: 1/5;
+      grid-row: 3;
+      margin-bottom: 104px;
+      left: -160px;
     }
   }
 
@@ -162,17 +351,50 @@
     @include on-phone-big {
       grid-column: 1/3;
       grid-row: 5;
-      left: 90px;
+      left: 120px;
+    }
+
+    @include on-phone-bigest {
+      grid-column: 1/3;
+      grid-row: 5;
+      left: 150px;
     }
 
     @include on-tablet {
       grid-column: 1/6;
     }
 
+    @include on-tablet-big {
+      grid-column: 1/6;
+      left: -98px;
+    }
+
+    @include on-tablet-bigest {
+      grid-column: 1/6;
+      left: -158px;
+    }
+
     @include on-desctop {
       grid-column: 8/12;
       grid-row: 3;
       margin-top: 100px;
+      left: 5px;
+    }
+
+    @include on-desctop-big {
+      grid-column: 8/12;
+      grid-row: 3;
+      margin-top: 100px;
+      left: 5px;
+      top: 60px;
+    }
+
+    @include on-desctop-bigest {
+      grid-column: 8/12;
+      grid-row: 3;
+      margin-top: 100px;
+      top: 120px;
+      left: 55px;
     }
   }
 
