--- a/src/styles/blocks/footer.scss
+++ b/src/styles/blocks/footer.scss
@@ -83,6 +83,7 @@
     }
 
     .footer__facebook {
+      position: relative;
       height: 24px;
       width: 11px;
       margin-right: 29px;
@@ -179,9 +180,18 @@
 }
 
 .footer__day {
+  position: relative;
   font-family: $ibm;
   font-weight: 400;
   margin-left: 5px;
+
+  &-1:hover,
+  &-2:hover,
+  &-3:hover {
+       font-size: 18px;
+       color: rgb(166, 17, 17);
+       transition: 0.3s ease-in-out;
+   }
 }
 
 .footer__last-day {
