--- a/src/styles/blocks/galery.block.scss
+++ b/src/styles/blocks/galery.block.scss
@@ -23,6 +23,14 @@
     margin: 0 39px 133px;
   }
 
+  @include on-tablet-bigest {
+    display: grid;
+    grid-template-columns: repeat(6, 130px);
+    justify-content: center;
+    gap: 30px;
+    margin: 0 39px 133px;
+  }
+
   @include on-desctop {
     display: grid;
     grid-template-columns: repeat(12, 70px);
@@ -55,6 +63,13 @@
     left: -50px;
   }
 
+  @include on-tablet-bigest {
+    position: relative;
+    grid-row: 1;
+    top: 130px;
+    left: -50px;
+  }
+
   @include on-desctop {
     position: relative;
     grid-row: 1;
@@ -64,6 +79,8 @@
 }
 
 .galery__photo-1 {
+  position: relative;
+
   @include on-phone {
     width: 280px;
     height: 410px;
@@ -85,6 +102,13 @@
     grid-row: 2;
   }
 
+  @include on-tablet-bigest {
+    width: 480px;
+    height: 600px;
+    grid-column: 1/4;
+    grid-row: 2;
+  }
+
   @include on-desctop {
     width: 370px;
     height: 600px;
@@ -94,6 +118,8 @@
 }
 
 .galery__photo-2 {
+  position: relative;
+
   @include on-phone {
     display: none;
   }
@@ -111,6 +137,15 @@
     margin-top: 150px;
   }
 
+  @include on-tablet-bigest {
+    display: block;
+    width: 480px;
+    height: 600px;
+    grid-column: 4/6;
+    grid-row: 2;
+    margin-top: 150px;
+  }
+
   @include on-desctop {
     display: block;
     width: 770px;
@@ -121,6 +156,8 @@
 }
 
 .galery__photo-3 {
+  position: relative;
+
   @include on-phone {
     display: none;
   }
@@ -132,14 +169,14 @@
   @include on-desctop {
     display: block;
     width: 770px;
-    height: 360px;
+    height: 370px;
     grid-column: 1/8 ;
     grid-row: 3;
   }
 }
 
 .galery__photo-4 {
-  @include on-phone {
+ @include on-phone {
     display: none;
   }
 
@@ -150,9 +187,10 @@
   @include on-desctop {
     display: block;
     width: 370px;
-    height: 360px;
+    height: 370px;
     grid-column: 9/13 ;
     grid-row: 3;
+    left: -29px;
   }
 }
 
@@ -184,6 +222,15 @@
     top: 150px;
   }
 
+  @include on-tablet-bigest {
+    position: relative;
+    width: 480px;
+    height: 600px;
+    grid-column: 1/4;
+    grid-row: 2;
+    left: -20px;
+  }
+
   @include on-desctop {
     position: relative;
     width: 370px;
@@ -191,6 +238,7 @@
     grid-column: 1/4 ;
     grid-row: 2;
     top: 150px;
+    left: 2px;
   }
 
   &:hover {
