--- a/src/styles/utils/mixins.scss
+++ b/src/styles/utils/mixins.scss
@@ -11,8 +11,20 @@
   }
 }
 
+@mixin on-phone-mid {
+  @media ( min-width: 400px) {
+    @content;
+  }
+}
+
 @mixin on-phone-big {
-  @media ( min-width: 520px) {
+  @media ( min-width: 500px) {
+    @content;
+  }
+}
+
+@mixin on-phone-bigest {
+  @media ( min-width: 600px) {
     @content;
   }
 }
@@ -23,8 +35,32 @@
   }
 }
 
+@mixin on-tablet-big {
+  @media ( min-width: 900px) {
+    @content;
+  }
+}
+
+@mixin on-tablet-bigest {
+  @media ( min-width: 1100px) {
+    @content;
+  }
+}
+
 @mixin on-desctop {
   @media (min-width: 1280px) {
+    @content;
+  }
+}
+
+@mixin on-desctop-big {
+  @media (min-width: 1400px) {
+    @content;
+  }
+}
+
+@mixin on-desctop-bigest {
+  @media (min-width: 1600px) {
     @content;
   }
 }
