--- a/src/styles/blocks/header.scss
+++ b/src/styles/blocks/header.scss
@@ -32,14 +32,15 @@
   @include on-desctop {
     display: grid;
     grid-template-columns: repeat(12, 70px);
-    justify-content: center;
+    justify-content: end;
     gap: 30px;
     margin: 0 0 200px;
   }
 }
 
 .header__container {
-  width: 100%;
+  position: relative;
+  max-width: 100%;
   background-image: url(../images/header.png);
   background-position: center;
   background-repeat: no-repeat;
@@ -49,11 +50,12 @@
   padding: 0;
 
   @include on-phone {
-    width: 320px;
-    height: 300px;
-    grid-column: 1/3;
+    width: 500px;
+    height: 340px;
+    grid-column: 1/4;
     grid-row: 1;
-    margin-left: -20px;
+    margin-left: 0;
+    left: 10px;
   }
 
   @include on-phone-big {
@@ -64,23 +66,47 @@
     margin-left: -20px;
   }
 
+  @include on-phone-bigest {
+    width: 760px;
+    height: 470px;
+    grid-column: 1/4;
+    grid-row: 1;
+    left: 10px;
+  }
+
+
   @include on-tablet {
-    width: 374px;
+    max-width: 400px;
     height: 384px;
     grid-column: 4/6;
     grid-row: 1;
-    margin-left: 10px;
+  }
+
+  @include on-tablet-big {
+    max-width: 520px;
+    height: 420px;
+    grid-column: 4/6;
+    grid-row: 1;
+  }
+
+  @include on-tablet-bigest {
+    max-width: 620px;
+    height: 450px;
+    grid-column: 4/6;
+    grid-row: 1;
   }
 
   @include on-desctop {
-    grid-column: 6 /12;
-    width: 780px;
-    height: 655px;
+    grid-column: 4 /12;
+    min-width: 740px;
+    height: 600px;
     margin-left: 60px;
+    left: 70px;
   }
 }
 
 .header__logo {
+  position: relative;
   font-family: $mont;
   font-weight: 700;
   color: $dark;
@@ -88,15 +114,24 @@
   @include on-phone {
     font-size: 30px;
     margin: 0 0 0 120px;
+    left: 90px;
   }
 
   @include on-phone-big {
     font-size: 30px;
     margin: 0 0 0 250px;
+    left: 10px;
+  }
+
+  @include on-phone-bigest {
+    font-size: 30px;
+    margin: 0 0 0 250px;
+    left: 90px;
   }
 
   @include on-tablet {
     margin: 15px 0 0 80px;
+    left: -30px;
   }
 
   @include on-desctop {
@@ -112,27 +147,73 @@
     grid-column: 1/1;
     grid-row: 1;
     margin-top: 25px;
-    left: 10px;
+    left: 100px;
   }
 
-  @include on-phone-big {
+  @include on-phone-mid {
     grid-column: 1/1;
     grid-row: 1;
     margin-top: 25px;
     left: 40px;
   }
 
+  @include on-phone-big {
+    grid-column: 1/1;
+    grid-row: 1;
+    margin-top: 25px;
+    left: 60px;
+  }
+
+  @include on-phone-bigest {
+    grid-column: 1/1;
+    grid-row: 1;
+    margin-top: 25px;
+    left: 80px;
+  }
+
   @include on-tablet {
     grid-row: 1;
     grid-column: 1/1;
     margin: 45px 0 0;
-    left: -20px;
+    left: -70px;
+  }
+
+  @include on-tablet-big {
+    grid-row: 1;
+    grid-column: 1/1;
+    margin: 45px 0 0;
+    left: -160px;
+  }
+
+  @include on-tablet-bigest {
+    grid-row: 1;
+    grid-column: 1/1;
+    margin: 45px 0 0;
+    left: -220px;
   }
 
   @include on-desctop {
     grid-row: 1;
     grid-column: 1/1;
     margin: 45px 0 0;
+    top: -1px;
+    left: -60px;
+  }
+
+  @include on-desctop-big {
+    grid-row: 1;
+    grid-column: 1/1;
+    margin: 45px 0 0;
+    top: -1px;
+    left: -180px;
+  }
+
+  @include on-desctop-bigest {
+    grid-row: 1;
+    grid-column: 1/1;
+    margin: 45px 0 0;
+    top: -1px;
+    left: -390px;
   }
 
   .header__menu {
@@ -142,13 +223,14 @@
 
     @include on-phone {
       gap: 40px;
-      left: -10px;
+      left: 20px;
       top: -12px;
     }
   }
 }
 
 .header__title {
+  position: relative;
   font-family: $mont;
   font-weight: 700;
 
@@ -158,6 +240,7 @@
     font-size: 45px;
     text-align: center;
     margin: 0;
+    left: 110px;
   }
 
   @include on-phone-big {
@@ -166,6 +249,7 @@
     font-size: 45px;
     text-align: center;
     margin: 0;
+    left: -5px;
   }
 
   @include on-tablet {
@@ -173,13 +257,47 @@
     grid-row: 1;
     font-size: 54px;
     margin: 127px 0 0;
+    left: -55px;
+  }
+
+  @include on-tablet-big {
+    grid-column: 1/3;
+    grid-row: 1;
+    font-size: 54px;
+    margin: 127px 0 0;
+    left: -155px;
+  }
+
+  @include on-tablet-bigest {
+    grid-column: 1/3;
+    grid-row: 1;
+    font-size: 54px;
+    margin: 127px 0 0;
+    left: -210px;
   }
 
   @include on-desctop {
-    grid-column: 1/4;
+    grid-column: 1/3;
     grid-row: 1;
     font-size: 72px;
     margin: 206px 0 0;
+    left: -50px;
+  }
+
+  @include on-desctop-big {
+    grid-column: 1/3;
+    grid-row: 1;
+    font-size: 72px;
+    margin: 206px 0 0;
+    left: -190px;
+  }
+
+  @include on-desctop-bigest {
+    grid-column: 1/3;
+    grid-row: 1;
+    font-size: 72px;
+    margin: 206px 0 0;
+    left: -390px;
   }
 }
 
@@ -188,8 +306,9 @@
   display: flex;
 
   @include on-phone {
-    grid-column: 1/3;
+    grid-column: 1/4;
     grid-row: 3;
+    left: 108px;
   }
 
   @include on-phone-big {
@@ -198,18 +317,45 @@
     left: 150px;
   }
 
-  @include on-tablet {
+  @include on-phone-bigest {
     grid-column: 1/3;
+    grid-row: 3;
+    left: 220px;
+  }
+
+  @include on-tablet {
+    grid-column: 1/4;
     grid-row: 1;
     margin: 295px 0 0;
-    left: 50px;
+    left: -50px;
+  }
+
+  @include on-tablet-big {
+    grid-column: 1/4;
+    grid-row: 1;
+    margin: 295px 0 0;
+    left: -150px;
+  }
+
+  @include on-tablet-bigest {
+    grid-column: 1/4;
+    grid-row: 1;
+    margin: 295px 0 0;
+    left: -200px;
   }
 
   @include on-desctop {
     grid-column: 3/7;
     grid-row: 1;
     margin: 467px 0 0;
-    left: -40px;
+    left: -200px;
+  }
+
+  @include on-desctop-bigest {
+    grid-column: 3/7;
+    grid-row: 1;
+    margin: 467px 0 0;
+    left: -180px;
   }
 }
 
@@ -256,6 +402,7 @@
 }
 
 .header__events {
+  position: relative;
   display: flex;
   align-items: center;
   justify-content: space-between;
@@ -280,6 +427,23 @@
     grid-column: 1/1;
     grid-row: 1;
     margin: 522px 0 0 ;
+    left: -90px;
+  }
+
+  @include on-desctop-big {
+    display: flex;
+    grid-column: 1/1;
+    grid-row: 1;
+    margin: 522px 0 0 ;
+    left: -220px;
+  }
+
+  @include on-desctop-bigest {
+    display: flex;
+    grid-column: 1/1;
+    grid-row: 1;
+    margin: 522px 0 0 ;
+    left: -420px;
   }
 
   .header__cross {
@@ -294,6 +458,7 @@
 
 
   .header__text {
+    position: relative;
     font-family: $ibm;
     font-weight: 700;
     font-size: 14px;
