--- a/src/styles/blocks/menu.scss
+++ b/src/styles/blocks/menu.scss
@@ -53,20 +53,43 @@
   @include on-phone {
     margin: 0 34px 0 0;
     top: -12px;
+    left: 10px;
+  }
+
+  @include on-phone-mid {
+    margin: 0 34px 0 0;
+    top: -12px;
+    left: -50px;
   }
 
   @include on-phone-big {
     margin: 0 34px 0 0;
-    left: -100px;
+    left: -75px;
+  }
+
+  @include on-phone-bigest {
+    margin: 0 34px 0 0;
+    left: -125px;
   }
 
   @include on-tablet {
     margin: 0 64px 0 0;
-    left: 20px;
+    left: -10px;
+  }
+
+  @include on-tablet-big {
+    margin: 0 64px 0 0;
+    left: -100px;
   }
 
   @include on-desctop {
     margin: 0 108px 0 -50px;
+    left: 65px;
+  }
+
+  @include on-desctop-bigest {
+    margin: 0 108px 0 -50px;
+    left: -95px;
   }
 
 }
