fixed last commits

--- a/src/styles/blocks/actual_content.scss
+++ b/src/styles/blocks/actual_content.scss
@@ -109,6 +109,7 @@
 
   .actual__photo {
     position: relative;
+    cursor: pointer;
 
     @include on-phone {
       width: 300px;
@@ -254,6 +255,8 @@
   }
 
   .actual__photo-2 {
+    cursor: pointer;
+    
     @include on-phone {
       position: relative;
       width: 300px;
