--- a/src/styles/blocks/footer.scss
+++ b/src/styles/blocks/footer.scss
@@ -58,6 +58,7 @@
   }
 
   .footer__logo {
+    cursor: pointer;
     font-family: $mont;
     font-weight: 700;
     font-size: 36px;
@@ -191,6 +192,12 @@
        font-size: 18px;
        color: rgb(166, 17, 17);
        transition: 0.3s ease-in-out;
+   }
+
+  &-4:hover {
+      font-size: 20px;
+      color: rgb(166, 17, 17);
+      transition: 0.3s ease-in-out;
    }
 }
 
