--- a/src/styles/blocks/galery.block.scss
+++ b/src/styles/blocks/galery.block.scss
@@ -80,6 +80,7 @@
 
 .galery__photo-1 {
   position: relative;
+  cursor: pointer;
 
   @include on-phone {
     width: 280px;
@@ -119,6 +120,7 @@
 
 .galery__photo-2 {
   position: relative;
+  cursor: pointer;
 
   @include on-phone {
     display: none;
@@ -157,6 +159,7 @@
 
 .galery__photo-3 {
   position: relative;
+  cursor: pointer;
 
   @include on-phone {
     display: none;
@@ -176,6 +179,8 @@
 }
 
 .galery__photo-4 {
+  cursor: pointer;
+  
  @include on-phone {
     display: none;
   }
