--- a/src/styles/blocks/header.scss
+++ b/src/styles/blocks/header.scss
@@ -107,6 +107,7 @@
 
 .header__logo {
   position: relative;
+  cursor: pointer;
   font-family: $mont;
   font-weight: 700;
   color: $dark;
@@ -304,6 +305,11 @@
 .header__box {
   position: relative;
   display: flex;
+  cursor: pointer;
+
+a {
+  text-decoration: none;
+}
 
   @include on-phone {
     grid-column: 1/4;
