fixed last commits

--- a/src/styles/blocks/footer.scss
+++ b/src/styles/blocks/footer.scss
@@ -185,7 +185,8 @@
   font-family: $ibm;
   font-weight: 400;
   margin-left: 5px;
-
+  transition: 0.3s ease-in-out;
+  
   &-1:hover,
   &-2:hover,
   &-3:hover {
