--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,7 +1,17 @@
 @import "utils";
 @import "fonts";
 @import "typography";
+@import "utils/vars";
+@import "blocks/header";
+@import "blocks/aside";
+@import "blocks/body-main";
+@import "blocks/footer";
 
-body {
-  background: $c-gray;
+.page {
+  scroll-behavior: smooth;
+
+  &__body {
+    background: $c-gray;
+    margin: 0;
+  }
 }
