--- a/src/styles/utils/_mixins.scss
+++ b/src/styles/utils/_mixins.scss
@@ -4,3 +4,42 @@
     #{$_property}: $_toValue;
   }
 }
+
+@mixin on-phone {
+  @media(max-width : 639px) {
+    @content;
+  }
+}
+
+@mixin on-tablet {
+  @media(min-width : 640px) and (max-width: 1279px) {
+    @content;
+  }
+}
+
+@mixin on-desktop {
+  @media(min-width : 1280px) {
+    @content;
+  }
+}
+
+@mixin page-grid {
+  display: grid;
+
+  $column: 12;
+
+  grid-template-columns: repeat(#{$column}, 1fr);
+  column-gap: 30px;
+
+  @media (max-width: 1279px) {
+    $column: 6;
+
+    grid-template-columns: repeat(#{$column}, 1fr);
+  }
+
+  @media (max-width: 639px) {
+    $column: 2;
+
+    grid-template-columns: repeat(#{$column}, 1fr);
+  }
+}
