--- a/src/styles/blocks/general/_page.scss
+++ b/src/styles/blocks/general/_page.scss
@@ -1,15 +1,11 @@
 * {
   margin: 0;
   padding: 0;
-  transition-duration: $effect-duration;
+  transition: all $effect-duration ease;
 }
 
 .page {
   scroll-behavior: smooth;
-
-  // &:has(.menu:target) {
-  //   overflow: hidden;
-  // }
 }
 
 .body {
@@ -20,3 +16,6 @@
   display: grid;
 }
 
+.main:target + menu {
+  transform: translateY(-100%);
+}
