--- a/src/styles/blocks/sections/_footer.scss
+++ b/src/styles/blocks/sections/_footer.scss
@@ -10,6 +10,7 @@
   @include content-padding-inline;
 
   &__icons {
+    z-index: 1;
     grid-column: span 2;
     display: flex;
     justify-content: space-between;
@@ -32,8 +33,13 @@
 
   &__logo {
     @include logo-styles;
+
     font-size: 36px;
     text-decoration: none;
+
+    &:hover {
+      transform: scale(1.1);
+    }
   }
 
   &__socialMedia {
@@ -47,6 +53,14 @@
     @include on-desktop {
       gap: 22px;
     }
+  }
+
+  &__socialMedia-facebook:hover {
+    transform: translateY(-5px);
+  }
+
+  &__socialMedia-instagram:hover {
+    transform: translateY(-5px);
   }
 
   &__schedule {
@@ -81,6 +95,7 @@
   &__contacts {
     grid-column: 2 / -1;
     line-height: 150%;
+    z-index: 1;
 
     @include on-tablet {
       grid-column: 4 / 6;
@@ -101,6 +116,10 @@
     display: block;
     text-decoration: none;
     color: $black-text-color;
+
+    &:hover {
+      opacity: 0.5;
+    }
   }
 
   &__line {
@@ -132,6 +151,7 @@
     row-gap: 20px;
 
     @include page-grid;
+
     @include on-desktop {
       grid-template-rows: repeat(2, 14px);
       grid-row: 1 / 2;
@@ -189,6 +209,10 @@
       @include on-desktop {
         grid-column: 10 / 12;
       }
+    }
+
+    &:hover {
+      opacity: 0.5;
     }
   }
 
