--- a/src/styles/blocks/sections/_gallery.scss
+++ b/src/styles/blocks/sections/_gallery.scss
@@ -5,8 +5,8 @@
   &__tittle-wraper {
     @include page-grid;
     @include content-padding-inline;
-    margin-inline: auto;
 
+    margin-inline: auto;
     margin-bottom: 40px;
 
     @include on-tablet {
@@ -22,7 +22,7 @@
     grid-column: 1 / -1;
     color: $black-text-color;
     text-align: center;
-    font-family: 'Montserrat', sans-serif;
+    font-family: Montserrat, sans-serif;
     font-size: 36px;
     font-style: normal;
     font-weight: 700;
@@ -40,8 +40,29 @@
     @include on-desktop {
       @include page-grid;
       @include content-padding-inline;
+
       row-gap: 30px;
       margin-inline: auto;
+    }
+  }
+
+  &__photo-wrapper {
+    overflow: hidden;
+
+    &--1 {
+      grid-column: span 4;
+    }
+
+    &--2 {
+      grid-column: span 8;
+    }
+
+    &--3 {
+      grid-column: span 8;
+    }
+
+    &--4 {
+      grid-column: span 4;
     }
   }
 
@@ -50,32 +71,28 @@
     background-size: cover;
     background-repeat: no-repeat;
 
-
     &--1 {
-      grid-column: span 4;
       background-image: url(./../images/desktop/gallery-1.png);
       height: 600px;
     }
 
     &--2 {
-      grid-column: span 8;
       background-image: url(./../images/desktop/gallery-2.png);
       height: 600px;
     }
 
     &--3 {
-      grid-column: span 8;
       background-image: url(./../images/desktop/gallery-3.png);
       height: 360px;
     }
 
     &--4 {
-      grid-column: span 4;
       background-image: url(./../images/desktop/gallery-4.png);
       height: 360px;
     }
+
+    &:hover {
+      transform: scale(1.2);
+    }
   }
 }
-
-
-
