--- a/src/styles/utils/_mixins.scss
+++ b/src/styles/utils/_mixins.scss
@@ -47,7 +47,7 @@
 @mixin logo-styles {
   color: $black-text-color;
   text-align: center;
-  font-family: 'Montserrat', sans-serif;
+  font-family: Montserrat, sans-serif;
   font-size: 30px;
   font-style: normal;
   font-weight: 700;
