--- a/src/styles/blocks/sections/_header.scss
+++ b/src/styles/blocks/sections/_header.scss
@@ -42,12 +42,11 @@
     }
   }
 
-  &__logo {
-    margin-top: 9px;
-    @include logo-styles;
+  &__logo-wrapper {
+    display: flex;
+    justify-content: center;
 
     @include on-tablet {
-      margin-top: 15px;
       width: 220px;
     }
 
@@ -56,11 +55,29 @@
     }
   }
 
+  &__logo {
+    @include logo-styles;
+
+    margin-top: 9px;
+    text-decoration: none;
+    z-index: 1;
+    height: min-content;
+
+    @include on-tablet {
+      margin-top: 15px;
+    }
+
+    &:hover {
+      transform: scale(1.2);
+    }
+  }
+
   &__content  {
-    position: relative;
-    grid-column: 1 / -1;
     @include page-grid;
     @include content-padding-inline;
+
+    position: relative;
+    grid-column: 1 / -1;
     margin-inline: auto;
 
     @include on-tablet {
@@ -69,6 +86,7 @@
   }
 
   &__burger-menu {
+    z-index: 1;
     position: absolute;
     display: block;
     top: 27px;
@@ -83,13 +101,17 @@
       top: 39px;
       left: 55px;
     }
+
+    &:hover {
+      transform: scale(1.2);
+    }
   }
 
   &__tittle {
     grid-column: 1 / -1;
     color: #000;
     text-align: center;
-    font-family: 'Montserrat', sans-serif;
+    font-family: Montserrat, sans-serif;
     font-size: 45px;
     font-style: normal;
     font-weight: 700;
@@ -112,10 +134,6 @@
       margin-bottom: 89px;
     }
   }
-}
-
-.buttonTickets:hover .buttonTickets__pointer {
-  transform: translateX(30px);
 }
 
 .buttonTickets {
@@ -179,6 +197,10 @@
       width: 70px;
     }
   }
+}
+
+.buttonTickets:hover .buttonTickets__pointer {
+  transform: translateX(30px);
 }
 
 .vertical {
