add task solution

--- a/src/styles/utils/_vars.scss
+++ b/src/styles/utils/_vars.scss
@@ -1,1 +1,7 @@
 $c-gray: #eee;
+$colortitle-exhibition: #687480;
+$color-mainsubtitle: #1a5a4c;
+$button-colormain: #f14a27;
+$fonts-plex-sans: 'IBM Plex Sans', sans-serif;
+$t-ransition: all 0.5s ease-in-out;
+$color-footer: #0f0e08;
