--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,6 +1,7 @@
 @import "./reset.scss";
 @import "./utils/variables";
 @import "./utils/mixins";
+@import "./utils/grid";
 
 .page {
   font-family: "Montserrat", sans-serif;
@@ -10,7 +11,7 @@
     background-color: $white;
     min-width: 320px;
 
-    &:has(.menu__page:target) {
+    &:has(.header__menu-page:target) {
       overflow: hidden;
     }
   }
@@ -52,6 +53,8 @@ h3 {
 
 .container {
   padding: 0 20px;
+  max-width: 1170px;
+  margin: 0 auto;
 
   @include onTablet {
     padding: 0 34px;
@@ -130,13 +133,27 @@ h3 {
         z-index: 1;
         transition: all 0.5s;
       }
+
+      @include onTablet {
+        padding-top: 45px;
+      }
+
+      &__wrapper {
+        @include onTablet {
+          display: flex;
+        }
+      }
     }
   
     &__top-actions {
       display: flex;
       padding-bottom: 24px;
       margin-bottom: 24px;
-      border-bottom: 1px solid $white;
+      border-bottom: 1px solid rgba(255, 255, 255, 0.5);
+
+      @include onTablet {
+        border-bottom: none;
+      }
     }
   
     &__content {
@@ -167,8 +184,20 @@ h3 {
       font-weight: 400;
       line-height: 150%;
 
+      @include onTablet {
+        flex-direction: row;
+        padding-left: 38px;
+        border-left: 1px solid rgba(255, 255, 255, 0.5);
+      }
+
       &-details {
         margin-top: 16px;
+
+        @include onTablet {
+          margin-left: 38px;
+          padding-top: 25px;
+          width: 144px;
+        }
       }
     }
   }
@@ -329,6 +358,7 @@ h3 {
   }
 
   &__info {
+    margin: 0 auto;
     display: flex;
     flex-direction: column;
     height: 140px;
@@ -404,6 +434,17 @@ h3 {
   }
 }
 
+.main__image {
+  background-image: url("../images/blocks/gallery/img-1.png");
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: contain;
+
+  @include onTablet {
+    background-image: url("../images/blocks/gallery/img-1__wide.jpg");
+  }
+}
+
 .slider-item {
   width: 100%;
   height: 100%;
@@ -417,6 +458,7 @@ h3 {
 }
 
 .nav-button-item {
+  cursor: pointer;
   height: 9px;
   width: 9px;
   background-image: url("../images/icons/nav-button-grey.svg");
@@ -448,15 +490,19 @@ h3 {
   }
 
   &__button {
-    position: relative;
-    display: block;
+    display: flex;
+    justify-content: center;
+    align-items: center;
     width: 50px;
     height: 50px;
     background-color: #f14a27;
 
+    @include onTablet {
+      width: 70px;
+      height: 70px;
+    }
+
     &-arrow {
-      position: absolute;
-      transform: translate(50%, 50%);
       width: 24px;
       height: 24px;
       background-image: url("../images/blocks/subscribe/arrow_black.svg");
@@ -469,6 +515,12 @@ h3 {
   background-color: $white;
   width: 230px;
   height: 50px;
+
+  @include onTablet {
+    height: 70px;
+    width: 374px;
+    margin-right: 16px;
+  }
 
   &::placeholder {
     padding-left: 24px;
@@ -508,6 +560,10 @@ h3 {
   height: 50px;
   background-image: url(../images/footer/scroll-up_button.svg);
 
+  @include onTablet {
+    display: none;
+  }
+
   @include hover(transform, scale(85%));
 
   &::after {
@@ -528,6 +584,12 @@ h3 {
     display: flex;
     justify-content: space-between;
     align-items: center;
+
+    @include onTablet {
+      flex-direction: column;
+      justify-content: start;
+      gap: 62px;
+    }
   }
 
   &__content {
@@ -540,11 +602,20 @@ h3 {
       margin-bottom: 40px;
       padding-bottom: 70px;
       border-bottom: 2px solid rgba(26, 90, 76, 0.5);
+    
+      @include onTablet {
+        margin-bottom: 64px;
+      }
+    
     }
   }
 
   &__contacts {
     width: 128px;
+
+    @include onTablet {
+      width: auto;
+    }
 
     &-title {
       margin-bottom: 20px;
@@ -557,10 +628,25 @@ h3 {
       @include hover(text-decoration, underline);
     }
   }
+
+  &__menu {
+    display: flex;
+  
+    @include onTablet {
+      grid-row: 2/2;
+      font-size: 14px;
+      font-weight: 400;
+      line-height: 100%;
+    }
+  }
 }
 
 .schedule {
   width: 130px;
+
+  @include onTablet {
+    width: auto;
+  }
 
   &-title {
     margin-bottom: 20px;
@@ -573,11 +659,15 @@ h3 {
 
 .menu {
   font-size: 14px;
-  margin-bottom: 60px;
 
   &-list {
     display: flex;
     gap: 20px;
+
+    @include onTablet {
+      margin-bottom: 120px;
+      gap: 110px;
+    }
   }
 
   &-item {
@@ -601,4 +691,11 @@ h3 {
   align-items: center;
   gap: 10px;
   font-size: 12px;
+
+  @include onTablet {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    grid-row: 3/3;
+  }
 }
