--- a/src/styles/blocks/footer.scss
+++ b/src/styles/blocks/footer.scss
@@ -287,7 +287,7 @@
 
     @include page-grid;
 
-    row-gap: 40px;
+    gap: 40px 0;
     grid-template-rows: 104px 435px 1px 90px;
 
     &__icons {
@@ -319,7 +319,7 @@
         align-items: center;
 
         &-link {
-          margin-left: 20px;
+          margin-right: 20px;
           text-decoration: none;
           display: inline-block;
 
