--- a/src/styles/blocks/body-main.scss
+++ b/src/styles/blocks/body-main.scss
@@ -197,7 +197,6 @@
         display: flex;
         gap: 30px;
         flex-wrap: wrap ;
-        overflow: hidden;
 
         &-wrapper1 {
           &-goose {
@@ -288,13 +287,16 @@
             border: 0;
             padding: 0;
             margin: 0;
+            font-family: Montserrat, sans-serif;
+            font-size: 14px;
+            padding-inline: 32px;
+            font-weight: 400;
+            box-sizing: border-box;
           }
 
           &-input::placeholder {
             color: $secondary-color;
-            font-family: Montserrat, sans-serif;
             font-size: 14px;
-            padding-inline: 32px;
             font-weight: 400;
           }
         }
@@ -606,15 +608,17 @@
             width: 100%;
             height: 50px;
             border: 0;
-            padding: 0;
             margin: 0;
+            font-size: 14px;
+            padding-inline: 32px;
+            font-weight: 400;
+            font-family: Montserrat, sans-serif;
+            box-sizing: border-box;
           }
 
           &-input::placeholder {
             color: $secondary-color;
-            font-family: Montserrat, sans-serif;
             font-size: 14px;
-            padding-inline: 32px;
             font-weight: 400;
           }
         }
@@ -939,13 +943,16 @@
             border: 0;
             padding: 0;
             margin: 0;
+            font-family: Montserrat, sans-serif;
+            font-size: 14px;
+            padding-inline: 32px;
+            font-weight: 400;
+            box-sizing: border-box;
           }
 
           &-input::placeholder {
             color: $secondary-color;
-            font-family: Montserrat, sans-serif;
             font-size: 14px;
-            padding-inline: 32px;
             font-weight: 400;
           }
         }
