add task solution

--- a/src/styles/_utils.scss
+++ b/src/styles/_utils.scss
@@ -5,7 +5,6 @@
 @import "utils/container";
 @import "utils/header";
 @import "utils/top-bar";
-// @import "utils/main";
 @import "utils/actual";
 @import "utils/section-tittle";
 @import "utils/product";
@@ -14,3 +13,12 @@
 @import "utils/page";
 @import "utils/menu";
 @import "utils/nav";
+@import "utils/menucontainer";
+@import "utils/galery";
+@import "utils/image";
+@import "utils/newsletter";
+@import "utils/footer";
+@import "utils/navigation";
+@import "utils/constanta";
+@import "utils/input";
+@import "utils/action-input";
