--- a/src/styles/utils/header.scss
+++ b/src/styles/utils/header.scss
@@ -2,8 +2,9 @@
   background-image: url(../images/bg-header.png);
   background-repeat: no-repeat;
   background-position: top;
-  // background-size: 320px;
-  background-size: contain;
+  background-size: 100% 300px;
+  height: 100%;
+  // background-size: contain;
 
   // height: 100%;
   padding-block: 0 70px;
@@ -11,7 +12,7 @@
   @include onTablet {
     background-position: top right;
 
-    background-size: 50%;
+    background-size: 374px;
     padding-block: 0 88px;
   }
 
@@ -22,6 +23,7 @@
 
   @include onDesktop1200 {
     background-size: 50%;
+    padding-block: 0 200px;
   }
 
   &__content {
@@ -106,6 +108,7 @@
     padding: 13px;
     background: $color-green;
     display: flex;
+    
 
     @include onTablet {
       padding: 23px;
