--- a/src/styles/utils/menu.scss
+++ b/src/styles/utils/menu.scss
@@ -1,7 +1,6 @@
 .menu {
-  max-height: 100%;
-
-  background-color: $color-green;
+  height: 100vh;
+  box-sizing: border-box;
 
   &__bottom {
     @include pageGrid;
@@ -32,15 +31,14 @@
       display: block;
       height: 1px;
       width: 280px;
-      // background-color: $color-white;
+      background-color: $color-white;
       margin-top: 96px;
-      background-color: rgba(255, 255, 255, 0);
+      // background-color: rgba(255, 255, 255, 0);
       position: absolute;
 
       @include onTablet {
         transform: rotate(-90deg);
         width: 145px;
-
         margin-top: 75px;
         margin-left: 245px;
       }
@@ -148,9 +146,16 @@
   }
 
   &__pad {
-    padding-block: 200px;
-    width: 100%;
+    padding-block: 100%;
     opacity: 0.5;
     background: $color-black-black;
+
+    @include onTablet {
+      padding-block: 100%;
+    }
+
+    @include onDesktop {
+      padding-block: 100%;
+    }
   }
 }
