--- a/src/styles/utils/romantic.scss
+++ b/src/styles/utils/romantic.scss
@@ -2,23 +2,20 @@
   position: absolute;
   background-image: url(../images/romantic.png);
   background-repeat: no-repeat;
-  background-size: 320px 220px;
+  background-size: 100% 210px;
   object-fit: cover;
   background-position: top;
-  padding-block: 0 100px;
 
   @include onTablet {
     background-size: 100% 390px;
     left: 39px;
     right: 39px;
-    padding-block: 0 88px;
   }
 
   @include onDesktop {
     left: 0;
     right: 0;
-    padding-block: 0 250px;
-    background-size: auto;
+    background-size: 100% ;
   }
 
   &__main {
@@ -73,10 +70,12 @@
       margin-top: 45px;
       margin-left: 55px;
       font-size: 14px;
+      width: 100px;
     }
 
-    @include onTablet {
+    @include onDesktop {
       margin-left: 100px;
+      width: 70px;
     }
   }
 
@@ -92,12 +91,14 @@
 
     @include onTablet {
       margin-top: 45px;
-      margin-left: 145px;
+      margin-left: 0;
       font-size: 14px;
+      width: 220px;
     }
 
     @include onTablet {
       margin-left: 150px;
+      width: 170px;
     }
   }
 
@@ -120,6 +121,21 @@
 
     @include onDesktop {
       padding-inline: 100px;
+    }
+  }
+
+  &__section-title {
+    color: $color-black-black;
+    text-align: center;
+    font-family: "Montserrat", sans-serif;
+    font-size: 36px;
+    font-weight: 700;
+    margin-bottom: 40px;
+    grid-column: span 2;
+    margin-top: 100px;
+    
+    @include onTablet {
+      display: none;
     }
   }
 }
