--- a/src/styles/utils/slider.scss
+++ b/src/styles/utils/slider.scss
@@ -1,4 +1,52 @@
 .slider {
-  margin-top: 200px;
-  background: green;
+  margin-top: 485px;
+  padding-block: 0 129px;
+
+  @include onTablet {
+    display: none;
+  }
+
+  &__content {
+    @include pageGrid;
+  }
+
+  &__main {
+    grid-column: span 2;
+
+    @include onTablet {
+      grid-column: span 6;
+    }
+  }
+}
+
+.swiper {
+  display: flex;
+  width: 100%;
+  height: 100%;
+  position: absolute;
+}
+
+.swiper-pagination {
+  margin-top: 20px;
+}
+
+.swiper-pagination-bullet {
+  --swiper-theme-color: #1a5a4c;
+}
+
+.swiper-slide {
+  text-align: center;
+  font-size: 18px;
+  background: #fff;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.swiper-slide img {
+  display: flex;
+  flex-direction: column;
+  width: 100%;
+  height: 100%;
+  object-fit: contain;
 }
