--- a/src/styles/utils/navigation.scss
+++ b/src/styles/utils/navigation.scss
@@ -1,13 +1,16 @@
-.nav {
+.navigation {
 
   &__item {
-    width: 100px;
+    width: 130px;
     transform-origin: left;
     transition: transform $time-transition ;
     cursor: pointer;
-
     &:hover {
       transform: scale(1.1) ;
+    }
+
+    @include onTablet {
+      width: 220px;
     }
 
     @include onDesktop {
@@ -21,24 +24,16 @@
     list-style: none;
     margin: 0;
     padding: 0;
-    gap: 24px;
-
-    @include onDesktop {
-      gap: 30px;
-    }
+    gap: 20px;
   }
 
   &__link {
-    color: $color-white;
+    color: $color-black-black;
     font-family: "IBM Plex Sans", sans-serif;
-    font-size: 16px;
-    font-weight: 500;
+    font-size: 14px;
+    font-weight: 400;
     line-height: 100%;
     text-decoration: none;
     text-align: left;
-
-    @include onDesktop {
-      font-size: 22px;
-    }
   }
 }
