--- a/src/styles/utils/section-tittle.scss
+++ b/src/styles/utils/section-tittle.scss
@@ -16,5 +16,22 @@
 
   @include onDesktop {
     grid-column: span 5;
+    text-align: left;
+  }
+
+  &__top {
+    color: $color-black-black;
+    text-align: center;
+    font-family: "Montserrat", sans-serif;
+    font-size: 36px;
+    font-weight: 700;
+    margin-bottom: 40px;
+    grid-column: span 2;
+    margin-top: 100px;
+    
+    @include onTablet {
+      margin-bottom: 48px;
+      grid-column: 1/4;
+    }
   }
 }
