--- a/src/styles/utils/top-bar.scss
+++ b/src/styles/utils/top-bar.scss
@@ -24,6 +24,12 @@
     margin-bottom: 0;
     margin-top: 9px;
     margin-right: 113px;
+    transition: transform $time-transition;
+    cursor: pointer;
+
+    &:hover {
+      transform: scale(1.1);
+    }
 
     @include onTablet {
       margin-top: 15px;
@@ -45,5 +51,11 @@
 
   &__menu-link {
     display: flex;
+    transition: transform $time-transition;
+    cursor: pointer;
+
+    &:hover {
+      transform: scale(1.1);
+    }
   }
 }
