--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,7 +1,23 @@
-@import "utils";
-@import "fonts";
-@import "typography";
-
-body {
-  background: $c-gray;
-}
+@import './utils/vars';
+@import './utils/mixins';
+@import './utils/reset';
+@import './blocks/common';
+@import './blocks/btn-scroll';
+@import './blocks/header';
+@import './blocks/top-bar';
+@import './blocks/menu';
+@import './blocks/overlay';
+@import './blocks/icon';
+@import './blocks/buttons';
+@import './blocks/btn';
+@import './blocks/arrow';
+@import './blocks/events';
+@import './blocks/bottom';
+@import './blocks/gallery';
+@import './blocks/slider';
+@import './blocks/dot';
+@import './blocks/subscribe';
+@import './blocks/form';
+@import './blocks/footer';
+@import './blocks/line';
+@import './blocks/navigation';
